src/objects/Out_of_Office_Notice__c.object
<CustomObject>
    <fields>
        <fullName>End__c</fullName>
        <inlineHelpText>This should be your Back in the Office Date</inlineHelpText>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Member__c</fullName>
        <label>Group Member</label>
        <referenceTo>Assignment_Groups__c</referenceTo>
        <relationshipName>Out_of_Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Jury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Out_of_Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Out of Office Notice</label>
    <listViews>
        <fullName>All_DS</fullName>
        <filterScope>Everything</filterScope>
        <label>All DS</label>
    </listViews>
    <listViews>
        <fullName>My_Out_of_Office</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Type__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Out of Office</label>
    </listViews>
    <nameField>
        <displayFormat>OOF-{00000}</displayFormat>
        <label>Out Of Office Notice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out of Offices Notices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_Validation</fullName>
        <active>true</active>
        <description>End date should be greater than Start date</description>
        <errorConditionFormula>End__c &lt;= Start__c</errorConditionFormula>
        <errorDisplayField>End__c</errorDisplayField>
        <errorMessage>End date should be greater than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date</fullName>
        <active>true</active>
        <description>End date cannot be null when Start date is not null</description>
        <errorConditionFormula>NOT(ISNULL(Start__c))  &amp;&amp;  ISNULL(End__c)</errorConditionFormula>
        <errorDisplayField>End__c</errorDisplayField>
        <errorMessage>Please enter End Date</errorMessage>
    </validationRules>
</CustomObject>